added welcome screen

--- a/src/variables.sass
+++ b/src/variables.sass
@@ -1,5 +1,4 @@
 // variables.sass
 // here are the variables for common css properties stored
-
 $primary-color: #0c3a78
-$secondary-color: #656c00
+$secondary-color: #A2BB17
