disabled blur on sidebar

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,8 @@
 
   <app-welcome-screen></app-welcome-screen>
 
-  <section class="sidebar" [ngClass]="{'blur': backdrop}">
+  <section class="sidebar">
+    <!-- [ngClass]="{'blur': backdrop}" -->
     <p>Hallo, Martin Rieger.</p>
 
     <article>
