--- a/src/app/welcome-screen/welcome-screen.component.sass
+++ b/src/app/welcome-screen/welcome-screen.component.sass
@@ -6,7 +6,7 @@ article
   left: 50%
   top: 30%
   transform: translate(-50%, -50%)
-  // background: grey
+  background: grey
   padding: 2%
   z-index: 100
 
