--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,6 +5,8 @@
 
   <section class="sidebar">
     <!-- [ngClass]="{'blur': backdrop}" -->
+      <img class="logo" src="../assets/images/SRH.svg.png"/>
+
     <p>Hallo, Martin Rieger.</p>
 
     <article>
