on click welcome, first blur is removed

--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -1,15 +1,18 @@
 @import "../../../plugins/neat/neat"
 @import "../../variables"
 
-.backdrop
-  position: absolute
-  top: 0
-  bottom: 0
-  left: 0
-  right: 0
-  background: black
-  z-index: 1000
-  opacity: 0.4
+.test
+  z-index: 999999 !important
+
+// .backdrop
+//   position: absolute
+//   top: 0
+//   bottom: 0
+//   left: 0
+//   right: 0
+//   background: black
+//   z-index: 10
+//   opacity: 0.4
 
 .blur
   filter: blur(3px)
