--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <main class="container">
   <div class="backdrop"></div>
 
-  <app-welcome-screen></app-welcome-screen>
+  <app-welcome-screen (onClickGo)="onWelcomeGo($event)"></app-welcome-screen>
 
   <section class="sidebar">
     <!-- [ngClass]="{'blur': backdrop}" -->
@@ -23,35 +23,35 @@
       </ul>
     </article>
   </section>
-  <section class="dashboard" [ngClass]="{'blur': backdrop}">
-    <h1>Ihre Module</h1>
+  <section class="dashboard">
+    <h1 [ngClass]="{'blur': backdrop}">Ihre Module</h1>
     <article class="container">
-      <div class="module-box">
+      <div class="module-box" [ngClass]="{'blur': blurElement!=1}">
         <img src="../assets/images/bild1.jpg" alt="bild1" />
         <h3>Waldklinikum</h3>
       </div>
 
-      <div class="module-box">
+      <div class="module-box" [ngClass]="{'blur': backdrop}">
         <img src="../assets/images/bild2.jpg" alt="bild2" />
         <h3>Unterhaltung</h3>
       </div>
 
-      <div class="module-box">
+      <div class="module-box" [ngClass]="{'blur': backdrop}">
         <img src="../assets/images/bild3.jpg" alt="bild3" />
         <h3>Nachsorge</h3>
       </div>
 
-      <div class="module-box">
+      <div class="module-box" [ngClass]="{'blur': backdrop}">
         <img src="../assets/images/bild1.jpg" alt="bild1" />
         <h3>Waldklinikum</h3>
       </div>
 
-      <div class="module-box">
+      <div class="module-box" [ngClass]="{'blur': backdrop}">
         <img src="../assets/images/bild2.jpg" alt="bild2" />
         <h3>Unterhaltung</h3>
       </div>
 
-      <div class="module-box">
+      <div class="module-box" [ngClass]="{'blur': backdrop}">
         <img src="../assets/images/bild3.jpg" alt="bild3" />
         <h3>Nachsorge</h3>
       </div>
