--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 
   <app-welcome-screen (onClickGo)="onWelcomeGo($event)"></app-welcome-screen>
 
-  <section class="sidebar">
+  <section class="sidebar" [ngClass]="{'blur': blurElement!=1}">
     <!-- [ngClass]="{'blur': backdrop}" -->
       <img class="logo" src="../assets/images/SRH.svg.png"/>
 
@@ -34,32 +34,32 @@
   <section class="dashboard">
     <h1 [ngClass]="{'blur': backdrop}">Ihre Module</h1>
     <article class="container">
-      <div class="module-box" [ngClass]="{'blur': blurElement!=1}">
+      <div class="module-box" [ngClass]="{'blur': blurElement!=2}">
         <img src="../assets/images/bild1.jpg" alt="bild1" />
         <h3>Waldklinikum</h3>
       </div>
 
-      <div class="module-box" [ngClass]="{'blur': backdrop}">
+      <div class="module-box" [ngClass]="{'blur': blurElement!=3}">
         <img src="../assets/images/bild2.jpg" alt="bild2" />
         <h3>Unterhaltung</h3>
       </div>
 
-      <div class="module-box" [ngClass]="{'blur': backdrop}">
+      <div class="module-box" [ngClass]="{'blur': blurElement!=4}">
         <img src="../assets/images/bild3.jpg" alt="bild3" />
         <h3>Nachsorge</h3>
       </div>
 
-      <div class="module-box" [ngClass]="{'blur': backdrop}">
+      <div class="module-box" [ngClass]="{'blur': blurElement!=5}">
         <img src="../assets/images/bild1.jpg" alt="bild1" />
         <h3>Waldklinikum</h3>
       </div>
 
-      <div class="module-box" [ngClass]="{'blur': backdrop}">
+      <div class="module-box" [ngClass]="{'blur': blurElement!=6}">
         <img src="../assets/images/bild2.jpg" alt="bild2" />
         <h3>Unterhaltung</h3>
       </div>
 
-      <div class="module-box" [ngClass]="{'blur': backdrop}">
+      <div class="module-box" [ngClass]="{'blur': blurElement!=7}">
         <img src="../assets/images/bild3.jpg" alt="bild3" />
         <h3>Nachsorge</h3>
       </div>
