--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -48,3 +48,8 @@
     img
       width: 100%
       height: auto
+
+    .description-text
+      position: absolute
+      right: 2%
+      bottom: 3%
