--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -13,13 +13,27 @@
       <strong>Tagesplan:</strong>
       <ul>
         <li>07:00 - Frühstück</li>
-        <li>3x Ibuprofen</li>
+        <li class="check">
+          <input type="checkbox" checked="checked">
+            <span class="checkmark"></span>
+                1x Ibuprofen
+        </li>
         <li>09:00 - Visite</li>
         <li>10:00 - Termin Dr. Müller</li>
         <li>11:00 - Anfang der Besuchzeit</li>
         <li>13:00 - Mittagessen</li>
+        <li>
+          <input type="checkbox" checked="checked">
+            <span class="checkmark"></span>
+                1x Ibuprofen
+        </li>
         <li>15:30 - Fußtherapie Dr. Linke</li>
         <li>18:00 - Ende der Besuchzeit</li>
+        <li>
+          <input type="checkbox" checked="checked">
+            <span class="checkmark"></span>
+                1x Ibuprofen
+        </li>
       </ul>
     </article>
 
