--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -42,6 +42,12 @@
     margin-left: 0
     margin-right: 20px
 
+    filter: blur(3px)
+    -o-filter: blur(3px)
+    -ms-filter: blur(3px)
+    -moz-filter: blur(3px)
+    -webkit-filter: blur(3px)
+
     h3
       color: $secondary-color
 
@@ -53,3 +59,10 @@
       position: absolute
       right: 2%
       bottom: 3%
+
+  .active-box
+    filter: blur(0px)
+    -o-filter: blur(0px)
+    -ms-filter: blur(0px)
+    -moz-filter: blur(0px)
+    -webkit-filter: blur(0px)
