--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -89,7 +89,7 @@
       </div>
 
       <div class="module-box" [ngClass]="{'active-box': blurElement==6 || blurElement == -1}">
-        <img src="../assets/images/bild2.jpg" alt="bild2" />
+        <img src="../assets/images/schach.jpg" alt="unterhaltung" />
         <h3>Unterhaltung</h3>
 
         <!-- Beschreibungstext -->
