--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -26,7 +26,7 @@ html, body
 
 .sidebar
   @include grid-column(3)
-  background: linear-gradient (to right, $primary-color, $seconday-color)
+  background: $primary-color
   color: white
   height: 100vh
   margin-left: 0
