--- a/src/variables.sass
+++ b/src/variables.sass
@@ -2,3 +2,8 @@
 // here are the variables for common css properties stored
 $primary-color: #0c3a78
 $secondary-color: #A2BB17
+
+$light-grey: #FAFAFA
+$grey: #D8D8D8
+
+$font-size-default: 1em
