--- a/src/styles.sass
+++ b/src/styles.sass
@@ -4,8 +4,9 @@
 
 body
   margin: 0
+  font-family: Ubuntu
+  font-size: $font-size-default
 
 .container
   @include grid-container
   font-family: 'Open Sans', sans-serif
-  // position: relative
