changed welcome colors

--- a/src/app/welcome-screen/welcome-screen.component.sass
+++ b/src/app/welcome-screen/welcome-screen.component.sass
@@ -20,6 +20,7 @@ article
   h1
     // font-weight: normal
     font-size: $font-size-default * 1.6
+    color: $primary-color
 
   .intro-text
     margin-bottom: 1.5em
@@ -33,6 +34,7 @@ article
 
       strong
         font-size: $font-size-default * 1.6
+        color: $primary-color
 
   .button-section
     text-align: center
