checkbox line-through add

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
         <li>07:00 - Frühstück</li>
         <li>
           <input type="checkbox" name="medicine" id="checked">
-              1x Ibuprofen
+              <label class="strikethrough">1x Ibuprofen</label>
         </li>
         <li>09:00 - Visite</li>
         <li>10:00 - Termin Dr. Müller</li>
@@ -23,13 +23,13 @@
         <li>13:00 - Mittagessen</li>
         <li>
           <input type="checkbox" name="medicine" id="checked">
-              1x Ibuprofen
+              <label class="strikethrough">1x Ibuprofen</label>
         </li>
         <li>15:30 - Fußtherapie Dr. Linke</li>
         <li>18:00 - Ende der Besuchzeit</li>
         <li>
           <input type="checkbox" name="medicine" id="checked">
-              1x Ibuprofen
+              <label class="strikethrough">1x Ibuprofen</label>
         </li>
       </ul>
     </article>
