--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -46,6 +46,9 @@ ul
 .checkmark
   opacity: 0
 
+input[type=checkbox]:checked + label.strikethrough
+  text-decoration: line-through
+
 .medicine
   width: 4vw
 
