White logo, grey line-through color

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
   <p *ngIf="blurElement == 1" class="description-text">
     Hier sind alle möglichen Sachen für den heutigen Tag zu sehen.
   </p>
-      <img class="logo" src="../assets/images/SRH.svg.png"/>
+      <img class="logo" src="../assets/images/SRH_weiß.png"/>
 
     <h3 class="begruessung">Hallo, <br> Martin Rieger.</h3>
 
