--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -27,7 +27,7 @@
   -webkit-filter: blur(3px)
 
 .logo
-  width: 5vw
+  width: 10vw
   margin-bottom: 2vh
 
 .begruessung
@@ -48,6 +48,7 @@ ul
 
 input[type=checkbox]:checked + label.strikethrough
   text-decoration: line-through
+  color: #a8a8a8
 
 .medicine
   width: 4vw
