return modules from a service and mock json 'database'

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -109,5 +109,13 @@
         </p>
       </div>
     </article>
+
+
+    <!-- Test mock modules -->
+    <ul>
+      <li *ngFor="let module of modules">
+        {{module.name}}
+      </li>
+    </ul>
   </section>
 </main>
