--- a/src/variables.sass
+++ b/src/variables.sass
@@ -6,5 +6,8 @@ $secondary-color: #A2BB17
 $light-grey: #FAFAFA
 $grey: #D8D8D8
 
+$bg-color-highlight: white
+$bg-color: $light-grey
+
 $font-size-default: 1em
 $third-color: #2E4053
