--- a/src/app/srh-tour/srh-tour.component.html
+++ b/src/app/srh-tour/srh-tour.component.html
@@ -1,3 +1,32 @@
 <section class="srh-tour">
-  <h1>Das SRH Waldklinikum</h1>
+  <h1>Ihr Aufenthalt im SRH Waldklinikum</h1>
+
+  <div class="srh-segment">
+    <h2>Ihr Standort</h2>
+    <article class="srh-box">
+      <img src="../assets/images/doctor.png" alt="Doktor" />
+      <h3>Dr. Stefan Metzstein</h3>
+      <p>Doktor für Kardiologie und Neurologie</p>
+      <button>Erfahre mehr</button>
+    </article>
+  </div>
+  <div class="srh-segment">
+    <h2>Ihr Arzt</h2>
+    <article class="srh-box">
+      <img src="../assets/images/doctor.png" alt="Doktor" />
+      <div class="right-col">
+        <h3>Dr. Stefan Metzstein</h3>
+        <p class="sub-h3">Doktor für Kardiologie und Neurologie</p>
+      </div>
+      <button>Erfahre mehr</button>
+    </article>
+  </div>
+  <div class="srh-segment">
+    <h2>Entdecken Sie das Klinikum!</h2>
+    <article class="srh-box special">
+      <p>Der Alltag im Klinikum ist nicht immer spannend und abwechslungsreich.
+        Werden Sie daher selbst aktiv und lernen unser Waldklinikum hautnah kennen.</p>
+      <button>Tour starten</button>
+    </article>
+  </div>
 </section>
