--- a/src/styles.sass
+++ b/src/styles.sass
@@ -6,6 +6,7 @@ body
   margin: 0
   font-family: Ubuntu
   font-size: $font-size-default
+  background: $bg-color
 
 .container
   @include grid-container
