--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -5,6 +5,11 @@
   background: #E6E6E6
   z-index: 10
 
+span
+  position: absolute
+  right: 3%
+  top: 3%
+
 .blur
   filter: blur(3px)
   -o-filter: blur(3px)
