--- a/src/app/srh-tour-game/srh-tour-game.component.html
+++ b/src/app/srh-tour-game/srh-tour-game.component.html
@@ -1,3 +1,18 @@
-<p>
-  srh-tour-game works!
-</p>
+<section class="srh-tour-game">
+  <h1>Die SRH Tour</h1>
+
+  <h2 class="special-font-2">Bücherei</h2>
+  <p>Die Bücherei befindet sich am Ende des Ganges kurz vor der Außenterasse.<br />
+  Welche Farbe haben die Bücherregale auf der Fensterseite?</p>
+  <ul>
+    <li>Grün</li>
+    <li>Blau</li>
+    <li>Rot</li>
+    <li>Grau</li>
+  </ul>
+
+  <button (click)="srhTourStarted = false" type="button" class="btn-secondary">Zurück</button>
+
+  <button type="button" class="btn-secondary btn-right">Überspringen</button>
+
+</section>
