--- a/src/app/srh-tour/srh-tour.component.sass
+++ b/src/app/srh-tour/srh-tour.component.sass
@@ -26,3 +26,20 @@
 
 .special
   background: $primary-color
+  color: white
+
+button
+  font-size: $font-size-default
+
+button.btn-primary
+  // float: right
+  padding: 4%
+  background: $secondary-color
+  border: 1px solid darken($secondary-color, 10%)
+
+button.btn-secondary
+  // float: right
+  padding: 4%
+  background: $grey
+  border: none
+  border: 1px solid darken($grey, 10%)
