--- a/src/app/srh-tour/srh-tour.component.html
+++ b/src/app/srh-tour/srh-tour.component.html
@@ -1,4 +1,4 @@
-<section class="srh-tour">
+<section *ngIf="!srhTourStarted" class="srh-tour">
   <h1>Ihr Aufenthalt im SRH Waldklinikum</h1>
 
   <div class="srh-segment">
@@ -24,9 +24,13 @@
   <div class="srh-segment">
     <h2>Entdecken Sie das Klinikum!</h2>
     <article class="srh-box special">
-      <p>Der Alltag im Klinikum ist nicht immer spannend und abwechslungsreich.
-        Werden Sie daher selbst aktiv und lernen unser Waldklinikum hautnah kennen.</p>
-      <button>Tour starten</button>
+      <p>
+        Werden Sie daher selbst aktiv und lernen unser Waldklinikum hautnah kennen.
+        Zum Abschluss gibt es ein gratis Getränk aus von der Cafeteria!
+      </p>
+      <button (click)="srhTourStarted = true">Tour starten</button>
     </article>
   </div>
 </section>
+
+<app-srh-tour-game *ngIf="srhTourStarted"></app-srh-tour-game>
