--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -5,7 +5,7 @@
   background: #E6E6E6
   z-index: 10
 
-span
+.home
   position: absolute
   right: 3%
   top: 3%
@@ -47,6 +47,16 @@ span
 ul
   list-style: none
   padding: 0 0 0 0
+
+.tagesplanbox > ul > li
+  padding-bottom: 3vh
+  font-size: 15px
+
+.time
+  background-color: $secondary-color
+  padding: 2.5%
+  margin-right: 1%
+  border-radius: 10%
 
 .checkmark
   opacity: 0
