welcome screen linear-gradient and some small changes

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
     <h3 class="begruessung">Hallo, <br> Martin Rieger.</h3>
 
     <article class="tagesplanbox">
-      <img class="daily" src="../assets/icons/daily.svg" alt="daily"/>:
+      <img class="daily" src="../assets/icons/daily.svg" alt="daily"/>
       <ul>
         <li><span class="time">07:00</span> Frühstück</li>
         <li>
