--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -36,13 +36,14 @@
   margin-bottom: 2vh
 
 .begruessung
-  margin-bottom: 4vh
+  margin-bottom: 3vh
 
 .tagesplanbox
   margin-bottom: 4vh
 
 .daily
   width: 3.5vw
+  margin-bottom: .5vh
 
 ul
   list-style: none
