--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,22 +14,22 @@
       <ul>
         <li><span class="time">07:00</span> Frühstück</li>
         <li>
-          <input type="checkbox" name="medicine" id="checked">
-              <label class="strikethrough">1x Ibuprofen</label>
+          <span class="time"><input type="checkbox" name="medicine" id="checked">
+              <label class="strikethrough">1x Ibuprofen</label></span>
         </li>
         <li><span class="time">09:00</span> Visite</li>
         <li><span class="time">10:00</span> Termin Dr. Müller</li>
         <li><span class="time">11:00</span> Anfang der Besuchzeit</li>
         <li><span class="time">13:00</span> Mittagessen</li>
         <li>
-          <input type="checkbox" name="medicine" id="checked">
-              <label class="strikethrough">1x Ibuprofen</label>
+          <span class="time"><input type="checkbox" name="medicine" id="checked">
+              <label class="strikethrough">1x Ibuprofen</label></span>
         </li>
         <li><span class="time">15:30</span> Fußtherapie Dr. Linke</li>
         <li><span class="time">18:00</span> Ende der Besuchzeit</li>
         <li>
-          <input type="checkbox" name="medicine" id="checked">
-              <label class="strikethrough">1x Ibuprofen</label>
+          <span class="time"><input type="checkbox" name="medicine" id="checked">
+              <label class="strikethrough">1x Ibuprofen</label></span>
         </li>
       </ul>
     </article>
