--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -57,10 +57,11 @@ ul
   font-size: 15px
 
 .time
-  background-color: $secondary-color
+  /*background-color: mediumseagreen
   padding: 2.5%
   margin-right: 1%
   border-radius: 10%
+  border: 1.5px solid mediumseagreen
 
 .checkmark
   opacity: 0
