New Images and full chechbox touch

--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -71,7 +71,7 @@ ul
 .checkmark
   opacity: 0
 
- label.strikethroughinput + [type=checkbox]:checked 
+[type=checkbox]:checked + span
   text-decoration: line-through
   color: #a8a8a8
 
