--- a/src/styles.sass
+++ b/src/styles.sass
@@ -4,13 +4,13 @@
 
 body
   margin: 0
-  font-family: Ubuntu
+  font-family: Rubuk
   font-size: $font-size-default
   background: $bg-color
 
 .container
   @include grid-container
-  font-family: 'Open Sans', sans-serif
+  font-family: 'Rubik', sans-serif
 
 .special-font-1
   color: $primary-color
