--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
     <h3 class="begruessung">Hallo, <br> Martin Rieger.</h3>
 
     <article class="tagesplanbox">
-      <img class="daily" src="../assets/icons/calendar.svg" alt="daily"/><p class="tagesplan">Tagesplan</p>
+      <img class="daily" src="../assets/icons/calendar-white.svg" alt="daily"/><p class="tagesplan">Tagesplan</p>
       <ul>
         <li><span class="time">07:00</span> Frühstück</li>
         <li>
